--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,11 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
-<body class="mat-app-background"
-      style="display: flex;
-             flex-direction: column;
-             height: 100vh;
-             margin: 0;">
+<body class="mat-app-background main">
   <app-root></app-root>
 </body>
 </html>
