--- a/music-cloud-web/src/main/web/src/index.html
+++ b/music-cloud-web/src/main/web/src/index.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body class="mat-app-background main">
   <app-root></app-root>
